# congressional-empirical-discourse

./: .env.example  .gitignore  .pre-commit-config.yaml  .pymarkdown.json  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: lint.yml  notebook-hygiene.yml  quality.yml  security.yml  test.yml
docs/: README.md
docs/data/: labeled_dataset_schema.md
docs/project/: bicam_setup_guide.md  data_dictionary.md  enrichment_plan.md  initial_project_overview.md  meeting_notes_kickoff.md  proposal.tex
docs/references/: haim_barak_corren_2026.md  presentation_slides.md
docs/workshop/: computing_resources.md  course_information.md
notebooks/: 01_explore_bicam.ipynb  02_covariate_analysis.ipynb
references/haim_barak_corren_2026/: .Rhistory  analysis.Rmd  bigram_phraser.pickle  bills.Rmd  causal.Rmd  claimbuster_correlation.ipynb  con_classify.py  cong_hearings_extract_metadata_jeremy.ipynb  congress_API_download.ipynb  constitutional_classifiy.ipynb  data_cleaning.Rmd  extract_bills.ipynb  fetch_congressgov_hearings.py  hearings_testing.ipynb  parse_xml_rawtext.ipynb  train_roberta.py  (+5 more)
scripts/: explorer.py  optimize_data.py  update_data_dict.py
src/: __init__.py  data.py  elections.py  leadership.py  pipeline.py  pipeline_enrich.py  preprocess.py  voteview.py
tests/: test_data.py  test_data_quality.py  test_elections.py  test_explorer_utils.py  test_leadership.py  test_optimize_data.py  test_pipeline.py  test_pipeline_enrich.py  test_pipeline_smoke.py  test_preprocess.py  test_voteview.py
(+5 files in other folders)
